--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.6",
+    "emailjs-com": "^3.2.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
